# Kabooz

./: .gitignore  CREDITS.md  DEVLOG.md  README.md  pyproject.toml  requirements.txt  scratch.py
.github/workflows/: publish.yml
docs/: architecture.md  authentication.md  cli.md  configuration.md  contributing.md  installation.md  library.md  naming.md
kabooz/: __init__.py  cli.py  client.py  config.py  dev.py  exceptions.py  quality.py  session.py  tui.py  tui_curses.py  url.py
kabooz/auth/: __init__.py  credentials.py  session.py
kabooz/data/: dev_audio.opus
kabooz/download/: __init__.py  credits.py  downloader.py  lyrics.py  musicbrainz.py  naming.py  tagger.py
kabooz/local/: __init__.py  export.py  playlist.py  store.py
kabooz/models/: __init__.py  album.py  artist.py  common.py  favorites.py  playlist.py  release.py  search.py  track.py  user.py
scripts/: make_dev_audio.py
tests/: test_catalog.py  test_client.py  test_downloader.py  test_imports.py  test_local.py  test_models.py  test_new_models.py  test_session_persistence.py  test_tagger.py  test_url.py
tools/: devlog.py
