[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qobuz-py"
version = "0.1.0"
description = "Unofficial Python client for the Qobuz music API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mutagen>=1.47",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13",
]
dev = [
    "pytest>=9",
    "pytest-anyio>=0.0.0",
    "respx>=0.22",
]

[project.scripts]
qobuz = "kabooz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kabooz"]

[tool.pytest.ini_options]
testpaths = ["tests"]

