[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kabooz"
version = "0.1.0"
description = "Unofficial Qobuz API client with CLI, local library, and download pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "tomli-w>=1.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13",
]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "httpx>=0.27",
]
all = [
    "qobuz-py[cli,dev]",
]

[project.scripts]
kabooz = "kabooz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kabooz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.metadata]
allow-direct-references = true
