[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kabooz"
version = "0.1.0"
description = "Unofficial Qobuz API client with CLI, local library, and download pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "sherlockholmesat221b", email = "sherlockholmesat221b@proton.me"},
]
keywords = ["qobuz", "music", "audio", "download", "hi-res", "flac", "audiophile", "kabooz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "httpx>=0.27",
    "tomli-w>=1.0",
    "mutagen>=1.47",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13",
]
dev = [
    "pytest>=8",
    "respx>=0.21",
]
all = [
    "kabooz[cli,dev]",
]

[project.urls]
Repository = "https://github.com/sherlockholmesat21bREBORN/kabooz"
Issues = "https://github.com/sherlockholmesat221bREBORN/kabooz/issues"

[project.scripts]
kabooz = "kabooz.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kabooz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.metadata]
allow-direct-references = true